--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -78,6 +78,7 @@
                                     <p class="card-text"><strong>Valor venta:</strong> <span th:text="*{productoValor}"></span></p>
                                     <p class="card-text"><strong>Tipo:</strong> <span th:text="*{productoTipo}"></span></p>
                                     <p class="card-text"><strong>Descripción:</strong> <span th:text="*{productoDescripcion}"></span></p>
+                                    <p class="card-text"><strong>Estado del producto:</strong> <span th:text="*{productoEstado}"></span></p>
                                     <div class="card-footer">
                                         <div class="btn-toolbar" role="toolbar">
                                             <div class="btn-group mr-2" role="group">
